# spreadpy

./: example.py  grid_search.py  pyproject.toml  test_sizing.py  utils.py
src/spreadpy/: __init__.py  engine.py  portfolio.py
src/spreadpy/backtest/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py  result.py
src/spreadpy/data/: __init__.py  dataLoader.py  futures_universe.json  priceTimeSeries.py  transactionCosts.py  universe.py
src/spreadpy/research/: __init__.py  pairFinder.py
src/spreadpy/signal/: __init__.py  copulaSignal.py  signal.py  zScoreSignal.py
src/spreadpy/sizing/: __init__.py  positionSizer.py
src/spreadpy/sizing/sizers/: __init__.py  kellySizer.py  kellySizers.py  linearSizer.py
src/spreadpy/spread/: __init__.py  hedgeRatioEstimator.py  spreadSeries.py
src/spreadpy/spread/hedgeRatio/: __init__.py  constantOLS.py  kalmanFilter.py  kalmanFilterWithVelocity.py  rollingOLS.py
