[project]
name = "spreadpy"
version = "0.1.0"
description = ""
authors = [
    {name = "Théo",email = "theophile.schmutz@telecom-sudparis.eu"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "yfinance (>=1.2.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "tqdm (>=4.67.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
